# fdp

./: Dockerfile  README.md  app.ts  deno.json  docker-compose.yml  import_map.json  makefile  scripts.json
.github/workflows/: actions.yml
app/: app.ts
app/routes/: socket.ts  ws.ts
app/static/: cards_black.json  cards_white.json  client.js  deck.ts  game.js  index.html  render.js  shuffle.js  shuffle.ts  style.css
app/static/data/: cards_white.json
app/static/utils/: deck.ts  game.js  renderer.js  session.js
scripts/: dedupcards.py  pyproject.toml
test/: game_test.js  game_test.ts
